--- a/branches/prototypes/gloss_n_dicts/src/org/omegat/Bundle_fr.properties
+++ b/branches/prototypes/gloss_n_dicts/src/org/omegat/Bundle_fr.properties
@@ -485,7 +485,7 @@ SW_CASE_SENSITIVE=Respecter la c&asse
 
 SW_REG_EXPRESSIONS=Expressions &r\u00e9guli\u00e8res
 
-SW_SEARCH_TM=Recherche dans les &m\u00e9moires de traduction
+SW_SEARCH_TM=Recherche dans les &MT
 
 SW_LOCATION=Emplacement
 
@@ -960,6 +960,8 @@ GUI_MATCHWINDOW_SUBWINDOWTITLE_Fuzzy_Matches=Correspondances
 
 GUI_MATCHWINDOW_SUBWINDOWTITLE_Glossary=Glossaires
 
+GUI_MATCHWINDOW_SUBWINDOWTITLE_Dictionary=Dictionnaires
+
 # 0 - filename
 GUI_SUBWINDOWTITLE_Editor=\u00c9diteur - {0}
 
@@ -1093,6 +1095,9 @@ MATCHES_GO_TO_SEGMENT_SOURCE=Atteindre le segment source
 MATCHES_INSERT=Ins\u00e9rer la correspondance dans la traduction
 
 MATCHES_REPLACE=Remplacer la traduction par la correspondance
+
+# Dictionary area popup menu
+DICTIONARY_HIDE=Masquer \u00ab\u00a0{0}\u00a0\u00bb
 
 STARTUP_ERRORBOX_TITLE=Erreur au d\u00e9marrage de l'application
 STARTUP_JAXB_LINKAGE_ERROR=Vous devez mettre \u00e0 jour votre JDK 1.6 vers la derni\u00e8re version, ou simplement retirer les fichiers jaxb-*.jar du r\u00e9pertoire d'OmegaT
