--- a/branches/prototypes/new-editor3/src/org/omegat/Bundle_fr.properties
+++ b/branches/prototypes/new-editor3/src/org/omegat/Bundle_fr.properties
@@ -247,9 +247,9 @@ MW_PROGRESS_TOOLTIP=Fichier : traduits / nombre de segments (projet : traduits u
 # NOTE: segment start is assumed to end with "0000" string to overwrite
 # with entry number.  If zeros not detected, entry number will not be
 # displayed
-TF_CUR_SEGMENT_START=<d\u00e9but 0000> 
+TF_CUR_SEGMENT_START=\u202A<d\u00e9but\u00A00000>\u202C
 
-TF_CUR_SEGMENT_END=<fin>
+TF_CUR_SEGMENT_END=\u202A<fin>\u202C
 
 TF_SELECT_FONTS_TITLE=Police d'affichage
 
